<resources>
    <string name="app_name">StoreKeeper</string>
    <string name="app_settings">APP_SETTINGS</string>
    <string name="colon">\:\u0020</string>
    <string name="settings">Настройки</string>
    <string name="close">Вернуться</string>
    <string name="exit">Выход</string>
    <string name="product_name">Наименование товара</string>
    <string name="product_sku">Артикул товара</string>
    <string name="product_size">Размер товара</string>
    <string name="confirm">Подтвердить</string>
    <string name="scan">Сканировать</string>
<!--    <string name="item_data_hint">Штрихкод / артикул / наименование</string>-->
    <string name="item_data_hint">Штрихкод</string>
    <string name="barcode">Штрихкод</string>
    <string name="or">или</string>
    <string name="menu_print">Печать ценников</string>
    <string name="menu_stock">Проверка остатков</string>
    <string name="menu_prices">Изменение цены</string>
    <string name="printer">Принтер</string>
    <string name="products_data">Данные о товарах</string>
    <string name="update_products">Обновить данные</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="update">Обновить</string>
    <string name="print_service_address">Адрес принт сервера</string>
    <string name="ones_service_address">Адрес 1С</string>
    <string name="ones_service_username">Имя пользователя 1С</string>
    <string name="ones_service_password">Пароль 1С</string>
    <string name="shop">Магазин</string>
    <string name="sizes_count">Загружено характеристик</string>
    <string name="products_count">Загружено товаров</string>
    <string name="barcodes_count">Загружено штрихкодов</string>
    <string name="failed_to_get_response">Не удалось получить ответ!</string>
    <string name="barcode_not_found">Штрихкод не найден!</string>
    <string name="size">Размер</string>
    <string name="price">Цена</string>
    <string name="amount">Кол-во</string>
    <string name="new_price">Новая</string>
    <string name="multiplier">Печатать</string>
    <string name="amount_hint">Количество</string>
    <string name="new_price_hint">Новая цена</string>
    <string name="new_price_annotation">*Новая цена будет добавлена ко всем выбранным размерам</string>
    <string name="save_button">Сохранить</string>
    <string name="print_button">Печать</string>
    <string name="please_wait">Пожалуйста, подождите.</string>
    <string name="receiving_data">Получаем данные…</string>
</resources>