<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="33dp">


    <CheckBox android:id="@+id/print_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#39A1BA"
        app:layout_constraintLeft_toRightOf="@id/print_size"
        />

    <TextView
        android:id="@+id/print_size"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/size"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toRightOf="@id/print_checkbox"
        app:layout_constraintRight_toLeftOf="@id/print_amount"
        />

    <TextView
        android:id="@+id/print_amount"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/amount"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintRight_toLeftOf="@id/print_price"
        app:layout_constraintLeft_toRightOf="@id/print_size"/>

    <TextView
        android:id="@+id/print_price"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/price"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintRight_toLeftOf="@id/print_multiplier"
        app:layout_constraintLeft_toRightOf="@id/print_amount"/>


    <EditText
        android:id="@+id/print_multiplier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|bottom"
        android:hint="@string/amount_hint"
        android:textSize="12sp"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="12dp"
        app:layout_constraintLeft_toRightOf="@id/print_price"
        app:layout_constraintRight_toRightOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>