<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.actions.PricesActionFragment">

    <include layout="@layout/fragment_result" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/prices_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="120dp"
        app:dividerColor="?attr/colorSecondary"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/prices_checkbox_column"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/prices_separator_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@id/prices_size_column"
        app:layout_constraintTop_toBottomOf="@id/prices_separator" />

    <TextView
        android:id="@+id/prices_size_column"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_horizontal|top"
        android:text="@string/size"
        app:layout_constraintLeft_toRightOf="@id/prices_checkbox_column"
        app:layout_constraintRight_toLeftOf="@id/prices_amount_column"
        app:layout_constraintTop_toBottomOf="@id/prices_separator" />

    <TextView
        android:id="@+id/prices_amount_column"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_horizontal|top"
        android:text="@string/amount"
        app:layout_constraintLeft_toRightOf="@id/prices_size_column"
        app:layout_constraintRight_toLeftOf="@id/prices_price_column"
        app:layout_constraintTop_toBottomOf="@id/prices_separator" />

    <TextView
        android:id="@+id/prices_price_column"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_horizontal|top"
        android:text="@string/price"
        app:layout_constraintLeft_toRightOf="@id/prices_amount_column"
        app:layout_constraintRight_toLeftOf="@id/prices_newprice_column"
        app:layout_constraintTop_toBottomOf="@id/prices_separator" />


    <TextView
        android:id="@+id/prices_newprice_column"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="7dp"
        android:gravity="center_horizontal|top"
        android:text="@string/new_price"
        app:layout_constraintLeft_toRightOf="@id/prices_price_column"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prices_separator" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/prices_separator_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        app:dividerColor="?attr/colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/prices_size_column" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/prices_recycler"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/prices_separator_bottom"
        tools:listitem="@layout/prices_action_unit"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_price_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintTop_toBottomOf="@id/prices_recycler"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/new_price_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/new_price_annotation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_price_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/new_price_annotation"/>

    <Button
        android:id="@+id/button_confirm"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_price_annotation"
        android:text="@string/save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>