<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/fragment_result" />

    <View
        android:id="@+id/print_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/table_separator"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp" />

    <CheckBox android:id="@+id/print_checkbox_column"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/print_separator"
        app:layout_constraintLeft_toRightOf="@id/print_size_column"
        app:layout_constraintBottom_toTopOf="@id/print_separator2"
        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/print_size_column"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/size"
        app:layout_constraintTop_toBottomOf="@id/print_separator"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toRightOf="@id/print_checkbox_column"
        app:layout_constraintRight_toLeftOf="@id/print_amount_column"
        />

    <TextView
        android:id="@+id/print_amount_column"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/amount"
        app:layout_constraintTop_toBottomOf="@id/print_separator"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintRight_toLeftOf="@id/print_price_column"
        app:layout_constraintLeft_toRightOf="@id/print_size_column"/>

    <TextView
        android:id="@+id/print_price_column"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/price"
        app:layout_constraintTop_toBottomOf="@id/print_separator"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintRight_toLeftOf="@id/print_multiplier_column"
        app:layout_constraintLeft_toRightOf="@id/print_amount_column"/>


    <TextView
        android:id="@+id/print_multiplier_column"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal|top"
        android:text="@string/multiplier"
        app:layout_constraintTop_toBottomOf="@id/print_separator"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_marginRight="12dp"
        app:layout_constraintLeft_toRightOf="@id/print_price_column"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/print_separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toBottomOf="@id/print_size_column"
        android:background="@drawable/table_separator"
        android:layout_marginTop="7dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/print_recycler"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/print_separator2"
        tools:listitem="@layout/print_action_unit"

        />

    <Button
        android:id="@+id/button_confirm"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/print_recycler"
        android:text="@string/print_button" />



</androidx.constraintlayout.widget.ConstraintLayout>